--- a/ts-apps/index.html
+++ b/ts-apps/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Typescript Demo</h1>
-    <script src="build/index.js"></script>
+    <!-- <script src="build/index.js"></script> -->
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
